1. 修正了部署web app部署路径含有空格等非常规字符时，导致wab部署失败的bug. 2. 增加了OSGi嵌入式启动时，扫描和部署wab的功能。 3. 修正了help发布插件jsp临时目录的问题，在OSGi内嵌式启动时，不需要再次替换临时目录。